# webrtc_ros

./: .devcontainer.json  .gitignore  .gitmodules  Docker-compose.yaml  Dockerfile  README.md
scripts/: build.sh
webrtc_msgs/: CMakeLists.txt  package.xml
webrtc_msgs/msg/: WebRTCMessage.msg
webrtc_msgs/srv/: CloseClient.srv  CreateClient.srv
webrtc_ros/: CMakeLists.txt  package.xml
webrtc_ros/include/webrtc_ros/: ros_video_capturer.h  ros_video_renderer.h  webrtc_client.h  webrtc_ros_server.h
webrtc_ros/launch/: webrtc_ros_server.launch.py
webrtc_ros/scripts/: ice_server_service.py  index.html  server.py
webrtc_ros/src/: ros_video_capturer.cpp  webrtc_client.cpp  webrtc_ros_server.cpp
webrtc_ros/web/: webrtc_ros.js
